--- a/.gitattributes
+++ b/.gitattributes
@@ -1,22 +1,25 @@
-# PowerShell Module files are Windows ASCii text files
-*.ps1 text eol=crlf
-*.psm1 text eol=crlf
-*.psd1 text eol=crlf
-
 # Auto detect text files and perform LF normalization
 * text=auto
 
 # Custom for Visual Studio
-*.cs     diff=csharp
+*.cs   diff=csharp
+
+# PowerShell script and Module files are Windows ASCii text files
+*.ps1  text eol=crlf
+*.psm1 text eol=crlf
+*.psd1 text eol=crlf
+*.PS1  text eol=crlf
+*.PSM1 text eol=crlf
+*.PSD1 text eol=crlf
 
 # Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
+*.doc  diff=astextplain
+*.DOC  diff=astextplain
 *.docx diff=astextplain
 *.DOCX diff=astextplain
 *.dot  diff=astextplain
 *.DOT  diff=astextplain
 *.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+*.PDF  diff=astextplain
+*.rtf  diff=astextplain
+*.RTF  diff=astextplain
